# SnakeGame

./: .gitignore  CMakeLists.txt  README.md
include/: Food.h  Game.h  Game.hpp  SFML.hpp  SFMLHeaders.h  Snake.h  Snake.hpp  constants.h
src/: Food.cpp  Game.cpp  Snake.cpp  constants.cpp  main.cpp
